--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/myimage.png" alt="Bilel Profile Picture"></td>
+      <td><img src="Images/myimage.png" alt="Bilel Profile Picture"></td>
       <td>
         <h1>Bilel Yaakoubi</h1>
         <p>
