--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
       <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
+      <td>CSS</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
       <td>C</td>
       <td>⭐⭐⭐</td>
     </tr>
